Adds an enhancement where the player stretches the media to fit if the dimensions are close to uniform, but not exactly ([ticket:1447])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@2057 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -201,6 +201,9 @@ ul {
                 	"Features": {
 	            		"onBeforePlay Event": "onbeforeplay.html",
                 		"InStream API": "instream.html"
+                	},
+                	"Enhancements": {
+                    	"Correct 'almost uniform' dimensions": "almostuniform.html"
                 	}
                 }
             };
