--- a/fl5/js/test/examples/single_mp3.html
+++ b/fl5/js/test/examples/single_mp3.html
@@ -11,15 +11,12 @@
         <script type="text/javascript">
             document.write("<h1>" + document.title + "</h1>");
         </script>
-        <p>
-            This sets up a player for IE9, FF, Chrome, Safari, and Opera, however, playback will fail in FF and Opera. IE < 9 will simply display "HTML5 Player should replace this".
-        </p>
-        
+        <p>This sets up a player for IE9, FF, Chrome, Safari, and Opera which plays a single MP3 file.  In Firefox and Opera, HTML5 mode will fail over to Flash mode.</p>
         <p>
           Select a rendering mode: 
           <select id="renderer">
-            <option value="flashonly">Flash Only</option>
-            <option value="html5only" selected="selected">HTML5 Only</option>
+            <option value="flash">Flash -> HTML5</option>
+            <option value="html5" selected="selected">HTML5 -> Flash</option>
           </select>
           <button id="go" onclick="setupAll()">Go</button>
         </p>
