--- a/fl5/js/test/examples/single_mp4.html
+++ b/fl5/js/test/examples/single_mp4.html
@@ -12,7 +12,7 @@
             document.write("<h1>" + document.title + "</h1>");
         </script>
         <p>
-            This sets up a player for IE9, FF, Chrome, Safari, and Opera, however, playback will fail in FF and Opera. IE < 9 will simply display "HTML5 Player should replace this".
+            This sets up a player for IE9, FF, Chrome, Safari, and Opera which plays a single MP4 file.  In Firefox and Opera, HTML5 mode will fail over to Flash mode. 
         </p>
         <p>Rendering mode:
             <select id="mode">
