Fixes an HTML5 InStream bug
git-svn-id: http://developer.longtailvideo.com/svn/trunk@2100 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/flashvars.html
+++ b/fl5/js/test/flashvars.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<title>Arbitrary Flashvar injection</title>
-		<script src="http://playertest.longtailvideo.com/swfobject.js"></script>
-		<script src="http://playertest.longtailvideo.com/jquery.js"></script>
+		<script src="./swfobject.js"></script>
+		<script src="./jquery.js"></script>
 
 		<script type="text/javascript">
 			$(document).ready(function() {
