--- a/fl5/js/test/jwsetup.html
+++ b/fl5/js/test/jwsetup.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>JW Embedder Setup Configurator</title>
 		<script src="../bin-debug/jwplayer.js"></script>
-		<script src="http://playertest.longtailvideo.com/jquery.js"></script>
+		<script src="jquery.js"></script>
 
 		<script type="text/javascript">
 			$(document).ready(function() {
