Fixes a number of bugs in the 5.9 Flash component: [ticket:1584], [ticket:1599], [ticket:1602], [ticket:1607] and [ticket:1607]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@2145 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -42,7 +42,9 @@ ul {
             		},
             		"Video codecs": {
             			"Single MP4": "single_mp4.html",
+            			"Single WebM": "single_webm.html",
             			"Single OGV": "single_ogv.html",
+            			"Single FLV": "single_flv.html",
             			"YouTube": "youtube.html",
             			"Multiple sources (MP4 and OGV)": "mp4_ogv.html",
             			"Bitrate switching": "bitrateswitching.html",
