Fixes an issue where the html5 player would not work if it were removed and then re-added ([ticket:1578])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@2150 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/setupandremove.html
+++ b/fl5/js/test/examples/setupandremove.html
@@ -27,8 +27,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
-            jwplayer("player").remove();
+            }).onReady(function() { this.remove() });
         </script>
         <h2>Added and removed 5 times</h2>
         <div height="270" id="player1" width="480">
@@ -43,8 +42,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
-            jwplayer("player1").remove();
+            }).onReady(function() { this.remove() });
             jwplayer("player1").setup({
             	players: settings.players(window.location.href),
             	levels: [{
@@ -53,8 +51,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
-           jwplayer("player1").remove();
+            }).onReady(function() { this.remove() });
             jwplayer("player1").setup({
             	players: settings.players(window.location.href),
             	levels: [{
@@ -63,8 +60,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
-           jwplayer("player1").remove();
+            }).onReady(function() { this.remove() });
             jwplayer("player1").setup({
             	players: settings.players(window.location.href),
             	levels: [{
@@ -88,8 +84,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
-            jwplayer("player2").remove();
+            }).onReady(function() { this.remove() });
             jwplayer("player2").setup({
             	players: settings.players(window.location.href, ["flash"]),
             	levels: [{
@@ -113,8 +108,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
-            jwplayer("player3").remove();
+            }).onReady(function() { this.remove() });
             jwplayer("player3").setup({
             	players: settings.players(window.location.href, ["html5"]),
             	levels: [{
@@ -138,8 +132,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
-            jwplayer("player4").remove();
+            }).onReady(function() { this.remove() });
             jwplayer("player4").setup({
             	players: settings.players(window.location.href, ["download"]),
             	levels: [{
